# mlops-notebook

./: LICENSE  package.json  pyproject.toml  setup.cfg
examples/: umap_drift.ipynb
mlops/: __init__.py
mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mlops/widgets/: umapWidget.py
ui/: package.json
