
[metadata]
name = mlops
version = attr: mlops.__version__
description = A helper notebook plugin to interact with datasets
long_description = file: README.md
long_description_content_type = text/markdown
homepage = https://github.com/mikeldking/mlops-notebook
author = mikeldking
author_email = mikeldking@gmail.com
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    scikit-learn>=0.2.0
    pandas>=0.25.3,<2